# prolix

./: .gitignore  README.md  package-lock.json  package.json
.expo/: settings.json
backend/: .env.example  prolix.db  pyproject.toml  schema.sql
backend/app/: main.py  models.py  providers.py  settings.py
backend/app/db/: storage.py
backend/app/services/: drift.py  grounding.py  llm_client.py  narration.py  prompts.py  retrieval.py  stage1_outline.py  stage2_prose.py  validator.py
backend/app/static/web/: app.js  index.html  styles.css
backend/corpus/: seed.json
backend/tests/: test_api.py  test_generation_contracts.py  test_grounding_pipeline.py  test_grounding_service.py  test_narration.py  test_narration_service.py
docs/: conflict-free-consolidated-pr-task.md
mobile/: App.js  package-lock.json  package.json
mobile/screens/: MainScreen.js
